--- a/0x02-CSS_advanced/styles/19-style.css
+++ b/0x02-CSS_advanced/styles/19-style.css
@@ -8,8 +8,8 @@
     --color-light-grey: #f3f3f3;
     --color-dark-grey: #353535;
     --text-color: var(--color-black);
-    --font-family-base: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    --font-family-title: Raleway, "Helvetica Neue", Helvetica, Arial, sans-serif;
+    --font-family-base: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    --font-family-title: 'Raleway', 'Helvetica Neue', Helvetica, Arial, sans-serif;
     --font-size-small: 1.2rem;
     --font-size-medium: 1.6rem;
     --font-size-large: 1.8rem;
@@ -24,7 +24,6 @@
     --section-tagline-transform: uppercase;
     --section-title-margin: 0;
     --section-title-color: var(--color-black);
-    --section-header-align: center;
     --section-padding: 5rem 0;
     --section-header-padding: 0 0 3rem;
     --section-body-padding: 0 0 3rem;
@@ -34,25 +33,22 @@
     --nav-item-font-family: var(--font-family-title);
     --nav-item-font-weight: var(--font-weight-bold);
     --nav-item-font-size: var(--font-size-medium);
-    --nav-item-letter-spacing: .04rem;
+    --nav-item-letter-spacing: 0.04rem;
     --nav-item-display: inline-block;
     --nav-item-margin: 0 0 3rem 0;
     --nav-item-link-hover: var(--color-primary);
     --section-tagline-margin: 0;
-}
-
-/* Universal box sizing rule */
+  }
+  
 *, *:before, *:after {
     box-sizing: border-box;
 }
-
-/* Effortless transitions when scrolling */
+  
 html {
     scroll-behavior: smooth;
     font-size: 62.5%;
 }
-
-/* Assign font properties to body and headings */
+  
 body {
     color: var(--text-color);
     font-family: var(--font-family-base);
@@ -66,7 +62,6 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: var(--font-weight-bold);
 }
 
-/* Style link pseudo classes */
 a:link {
     color: var(--text-color);
     text-decoration: none;
@@ -92,54 +87,45 @@ a:active {
     color: var(--color-primary);
 }
 
-/* Set padding for section class*/
 .section {
     padding: var(--section-padding);
 }
-
-/* Center and set padding for section header */
 .section-header {
-    padding: var(--section-header-padding);
     text-align: var(--section-header-align);
+    padding: var(--section-header-padding);
 }
 
-/* Set padding for section-body */
 .section-body {
     padding: var(--section-body-padding);
 }
 
-/* Set properties for section-footer */
 .section-footer {
     padding: var(--section-footer-padding);
     text-align: var(--section-footer-align);
 }
 
-/* Set properties for section-title */
 .section-title {
-    color: var(--section-title-color);
     font-family: var(--font-family-title);
     font-size: var(--font-size-xx-large);
     font-weight: var(--font-weight-bold);
     margin: var(--section-title-margin);
+    color: var(--section-title-color);
 }
 
-/* Add custom text-transform property */
 .section-tagline {
     color: var(--color-primary);
     font-family: var(--font-family-title);
+    text-transform: var(--section-tagline-transform);
     font-weight: var(--font-weight-bold);
     margin: var(--section-tagline-margin);
-    text-transform: var(--section-tagline-transform);
 }
 
-/* Styling for container class */
 .container {
     width: 960px;
     margin-left: auto;
     margin-right: auto;
 }
 
-/* Set padding for footer class */
 .footer {
     padding: var(--footer-padding);
 }
@@ -148,7 +134,6 @@ a:active {
     float: right;
 }
 
-/* Styling for nav and descendants */
 .nav {
     margin: 0;
     padding: 0;
@@ -174,23 +159,22 @@ a:active {
     color: var(--nav-item-link-hover);
 }
 
-/* Grid styling for element below */
 ul.row {
     margin: 0;
     padding: 0;
-    list-style: none;
+    list-style-type: none;
 }
 
 .col-1-3 {
     width: 33.33%;
     float: left;
-    padding: .5rem;
+    padding: 0.5rem;
 }
 
 .col-1-2 {
     width: 50%;
     float: left;
-    padding: .5rem;
+    padding: 0.5rem;
 }
 
 .footer-copyright {
