--- a/0x02-CSS_advanced/styles/26-style.css
+++ b/0x02-CSS_advanced/styles/26-style.css
@@ -69,11 +69,8 @@ html {
     font-size: 62.5%;
 }
 
-body a {
-    color: var(--color-black);
-}
-
 a:any-link {
+    color: var(--text-color);
     text-decoration: none;
 }
 
@@ -109,6 +106,7 @@ body {
     font-size: var(--font-size-medium);
     font-weight: var(--font-weight-regular);
     line-height: var(--line-height-base);
+    color: var(--text-color);
 }
 
 h1 h2 h3 h4 h5 h6 {
