--- a/0x02-CSS_advanced/styles/27-style.css
+++ b/0x02-CSS_advanced/styles/27-style.css
@@ -7,10 +7,9 @@
     --color-white: #ffffff;
     --color-light-grey: #f3f3f3;
     --color-dark-grey: #353535;
-    --text-color: --color-black;
-
-    --font-family-base: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    --font-family-title: 'Raleway', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    --text-color: var(--color-black);
+    --font-family-base: 'Open Sans', "Helvetica Neue", Helvetica, Arial, sans-serif; 
+    --font-family-title: 'Raleway', "Helvetica Neue", Helvetica, Arial, sans-serif;
     --font-size-small: 1.2rem;
     --font-size-medium: 1.6rem;
     --font-size-large: 1.8rem;
@@ -18,39 +17,35 @@
     --font-size-xx-large: 4.8rem;
     --font-weight-regular: 400;
     --font-weight-bold: 700;
-
     --line-height-small: 1.2;
     --line-height-base: 1.5;
     --line-height-big: 1.8;
-
     --section-header-align: center;
     --section-tagline-transform: uppercase;
-    --section-tagline-margin: 0;
     --section-title-margin: 0;
-    --section-title-color: --color-black;
+    --section-title-color: var(--color-black);
     --section-padding: 5rem 0;
     --section-header-padding: 0 0 3rem;
     --section-body-padding: 0 0 3rem;
     --section-footer-padding: 3rem 0 0;
+    --section-footer-align: center;
     --footer-padding: 5rem 0 1rem;
-
-    --nav-item-font-family: --font-family-title;
-    --nav-item-font-weight: --font-weight-bold;
-    --nav-item-font-size: --font-size-medium;
+    --nav-item-font-family: var(--font-family-title);
+    --nav-item-font-weight: var(--font-weight-bold);
+    --nav-item-font-size: var(--font-size-medium);
     --nav-item-letter-spacing: 0.04rem;
     --nav-item-display: inline-block;
     --nav-item-margin: 0 0 3rem 0;
-    --nav-item-link-hover: --color-primary;
-
+    --nav-item-link-hover: var(--color-primary);
+    --section-tagline-margin: 0;
     --button-display: inline-block;
     --button-padding: 1.5rem 3rem;
-    --button-border: 0.2rem solid var(--color);
-    --button-color: --color-black;
+    --button-border: 0.2rem solid var(--color-primary);
+    --button-color: var(--color-black);
     --button-text-decoration: none;
-    --button-font-size: --font-size-large;
-    --button-hover-color: --color-white;
+    --button-font-size: var(--font-size-large);
+    --button-hover-color: var(--color-white);
     --button-hover-text-decoration: none;
-    --button-hover-background: --color-primary;
 }
 
 [data-section-theme="dark"] {
@@ -60,20 +55,30 @@
     --button-color: var(--color-white);
 }
 
-* {
+*, *:before, *:after {
     box-sizing: border-box;
 }
 
 html {
     scroll-behavior: smooth;
     font-size: 62.5%;
+  }
+
+body {
+    color: var(--text-color);
+    font-family: var(--font-family-base);
+    font-size: var(--font-size-medium);
+    font-weight: var(--font-weight-regular);
+    line-height: var(--line-height-base);
 }
 
-body a {
-    color: var(--color-black);
+h1, h2, h3, h4, h5, h6 {
+    font-family: var(--font-family-title);
+    font-weight: var(--font-weight-bold);
 }
 
-a:any-link {
+a:link {
+    color: var(--text-color);
     text-decoration: none;
 }
 
@@ -89,64 +94,18 @@ a:active {
     background-color: var(--color-light-grey);
 }
 
-.button {
-    display: var(--button-display);
-    padding: var(--button-padding);
-    border: var(--button-border);
-    font-size: var(--button-font-size);
-    color: var(--button-color);
-    text-decoration: var(--button-text-decoration);
-}
-
-.button:hover {
-    color: var(--button-hover-color);
-    text-decoration: var(--button-hover-text-decoration);
-    background-color: var(--button-hover-background);
-}
-
-body {
-    font-family: var(--font-family-base);
-    font-size: var(--font-size-medium);
-    font-weight: var(--font-weight-regular);
-    line-height: var(--line-height-base);
-}
-
-h1 h2 h3 h4 h5 h6 {
-    font-family: var(--font-family-title);
-    font-weight: var(--font-weight-bold);
-}
-
-ul .row {
-    margin: 0 0 0 0;
-    padding: 0 0 0 0;
-    list-style-type: none;
+ul.row {
+    margin: 0;
+    padding: 0;
+    list-style: none;
 }
 
 .col-1-3 {
     width: 33.33%;
-    float: left;
-    padding: .5rem;
 }
 
 .col-1-2 {
     width: 50%;
-    float: left;
-    padding: .5rem;
-}
-
-[class*='col-'] {
-    float: left;
-    padding: .5rem;
-}
-
-.row::after {
-    content: normal;
-    display: table;
-    clear: both;
-}
-
-.visually-hidden {
-    display: none;
 }
 
 .navbar-menu {
@@ -154,8 +113,8 @@ ul .row {
 }
 
 .nav {
-    margin: 0 0 0 0;
-    padding: 0 0 0 0;
+    margin: 0;
+    padding: 0;
     list-style-type: none;
     text-align: center;
 }
@@ -178,6 +137,91 @@ ul .row {
     color: var(--nav-item-link-hover);
 }
 
+.visually-hidden {
+    display: none;
+}
+
+.card-category {
+    color: var(--color-primary);
+}
+
+.section {
+    padding: var(--section-padding);
+}
+
+.section-header{
+    text-align: var(--section-header-align);
+    padding: var(--section-header-padding);
+}
+
+.section-body{
+    padding: var(--section-body-padding);
+}
+
+.section-footer {
+    padding: var(--section-footer-padding);
+    text-align: var(--section-footer-align);
+}
+
+.section-title {
+    font-family: var(--font-family-title);
+    font-size: var(--font-size-xx-large);
+    font-weight: var(--font-weight-bold);
+    margin: var(--section-title-margin);
+    color: var(--section-title-color);
+}
+
+.section-tagline {
+    color: var(--color-primary);
+    font-family: var(--font-family-title);
+    text-transform: var(--section-tagline-transform);
+    font-weight: var(--font-weight-bold);
+    margin: var(--section-tagline-margin);
+}
+
+.container {
+    width: 960px;
+    margin: auto;
+}
+
+.footer {
+    padding: var(--footer-padding);
+}
+
+.footer-address {
+    color: var(--text-color);
+}
+
+.footer-copyright {
+    margin: 0;
+    font-size: var(--font-size-small);
+    color: var(--text-color);
+}
+
+.footer ul {
+    text-align: right;
+}
+
+.social-link {
+    display: block;
+}
+
+.social-link > svg {
+    fill: var(--text-color);
+}
+
+.row::after {
+    content: "";
+    display: table;
+    clear: both;
+    background-color: #d73953;
+}
+
+[class^="col-"] {
+  float: left;
+  padding: .5rem;
+}
+
 .card-services .card-title {
     margin: 0;
 }
@@ -192,6 +236,21 @@ ul .row {
     color: var(--color-white);
     background-color: var(--color-primary);
     text-decoration: none;
+}
+
+.button {
+    display: var(--button-display);
+    padding: var(--button-padding);
+    border: var(--button-border);
+    font-size: var(--button-font-size);
+    color: var(--button-color);
+    text-decoration: var(--button-text-decoration);
+}
+
+.button:hover {
+    color: var(--button-hover-color);
+    text-decoration: var(--button-hover-text-decoration);
+    background-color: var(--button-hover-background);
 }
 
 .card-testimonial {
@@ -210,19 +269,6 @@ ul .row {
     color: var(--color-primary);
 }
 
-.card-category .section-tagline {
-    color: var(--color-primary);
-}
-
-.section {
-    padding: var(--section-padding);
-}
-
-.section-header {
-    text-align: var(--section-header-align);
-    padding: var(--section-header-padding)
-}
-
 .section-hero {
     background-size: 90rem auto;
 }
@@ -232,59 +278,5 @@ ul .row {
 }
 
 .section-hero .section-inner {
-    padding: 10rem, 40rem, 2rem, 0;
-}
-
-.section-body {
-    padding: var(--section-body-padding);
-}
-
-.section-footer {
-    padding: var(--section-footer-padding);
-    text-align: section-footer-align;
-}
-
-.section-title {
-    font-family: var(--font-family-title);
-    font-size: var(--font-size-xx-large);
-    font-weight: var(--font-weight-bold);
-    margin: var(--section-title-margin);
-    color: var(--section-title-color);
-}
-
-.section-tagline {
-    font-family: var(--font-family-title);
-    font-weight: var(--font-weight-bold);
-    text-transform: var(--section-tagline-transform)
-}
-
-.container {
-    width: 960px;
-    margin: auto;
-}
-
-.footer {
-    padding: var(--footer-padding);
-}
-
-.footer-copyright {
-    margin: 0;
-    font-size: var(--font-size-small);
-    color: var(--text-color);
-}
-
-.footer ul {
-    text-align: right;
-}
-
-.footer-address {
-    color: var(--text-color);
-}
-
-.social-link {
-    display: block;
-}
-
-.social-link > svg {
-    fill: var(--text-color);
+    padding: 10rem 40rem 2rem 0;
 }
