--- a/0x02-CSS_advanced/styles/29-style.css
+++ b/0x02-CSS_advanced/styles/29-style.css
@@ -8,8 +8,8 @@
     --color-light-grey: #f3f3f3;
     --color-dark-grey: #353535;
     --text-color: var(--color-black);
-    --font-family-base: 'Open Sans', "Helvetica Neue", Helvetica, Arial, sans-serif; 
-    --font-family-title: 'Raleway', "Helvetica Neue", Helvetica, Arial, sans-serif;
+    --font-family-base: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    --font-family-title: 'Raleway', 'Helvetica Neue', Helvetica, Arial, sans-serif;
     --font-size-small: 1.2rem;
     --font-size-medium: 1.6rem;
     --font-size-large: 1.8rem;
@@ -36,7 +36,7 @@
     --nav-item-letter-spacing: 0.04rem;
     --nav-item-display: inline-block;
     --nav-item-margin: 0 0 3rem 0;
-    --nav-item-link-hover: var(--color-primary);
+    --nav-item-link-hover: var(--color-white);
     --section-tagline-margin: 0;
     --button-display: inline-block;
     --button-padding: 1.5rem 3rem;
@@ -46,7 +46,6 @@
     --button-font-size: var(--font-size-large);
     --button-hover-color: var(--color-white);
     --button-hover-text-decoration: none;
-    --button-hover-background: var(--color-primary);
     --button-hover-background: var(--color-primary);
     --header-padding: 4rem 0 0;
     --header-logo-position: relative;
@@ -68,9 +67,9 @@
 }
 
 html {
-    scroll-behavior: smooth;
-    font-size: 62.5%;
-  }
+      scroll-behavior: smooth;
+      font-size: 62.5%;
+}
 
 body {
     color: var(--text-color);
@@ -79,13 +78,13 @@ body {
     font-weight: var(--font-weight-regular);
     line-height: var(--line-height-base);
 }
-
+  
 h1, h2, h3, h4, h5, h6 {
     font-family: var(--font-family-title);
-    font-weight: var(--font-weight-bold);
+   font-weight: var(--font-weight-bold);
 }
 
-a:any-link {
+a:link {
     color: var(--text-color);
     text-decoration: none;
 }
@@ -102,62 +101,19 @@ a:active {
     background-color: var(--color-light-grey);
 }
 
-ul.row {
-    margin: 0;
-    padding: 0;
-    list-style: none;
+.button {
+    display: var(--button-display);
+    padding: var(--button-padding);
+    border: var(--button-border);
+    font-size: var(--button-font-size);
+    color: var(--button-color);
+    text-decoration: var(--button-text-decoration);
 }
 
-.col-1-3 {
-    width: 33.33%;
-}
-
-.col-1-2 {
-    width: 50%;
-}
-
-.navbar-menu {
-    float: right;
-}
-
-.nav {
-    margin: 0;
-    padding: 0;
-    list-style-type: none;
-    text-align: center;
-}
-
-.nav .nav-item {
-    font-family: var(--nav-item-font-family);
-    font-weight: var(--nav-item-font-weight);
-    font-size: var(--nav-item-font-size);
-    letter-spacing: var(--nav-item-letter-spacing);
-    display: var(--nav-item-display);
-    margin: var(--nav-item-margin);
-}
-
-.nav .nav-link {
-    display: block;
-    padding: .5rem 1rem .5rem 1rem;
-}
-
-.nav .nav-link:hover {
-    color: var(--nav-item-link-hover);
-}
-
-.nav .nav-link::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    background-color: var(--color-white);
-    width: 0;
-    height: 0.2rem;
-}
-  
-.nav .nav-item:hover .nav-link::before {
-    background-color: var(--color-primary);
-    width: 100%;
+.button:hover {
+    color: var(--button-hover-color);
+    text-decoration: var(--button-hover-text-decoration);
+    background-color: var(--button-hover-background);
 }
 
 .visually-hidden {
@@ -165,19 +121,19 @@ ul.row {
 }
 
 .card-category {
-    color: var(--color-primary);
+  color: var(--color-primary);
 }
 
 .section {
     padding: var(--section-padding);
 }
 
-.section-header{
+.section-header {
     text-align: var(--section-header-align);
     padding: var(--section-header-padding);
 }
 
-.section-body{
+.section-body {
     padding: var(--section-body-padding);
 }
 
@@ -212,8 +168,62 @@ ul.row {
     padding: var(--footer-padding);
 }
 
-.footer-address {
-    color: var(--text-color);
+.navbar-menu {
+    float: right;
+}
+
+.nav {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+    text-align: center;
+}
+
+.nav .nav-item {
+    font-family: var(--nav-item-font-family);
+    font-weight: var(--nav-item-font-weight);
+    font-size: var(--nav-item-font-size);
+    letter-spacing: var(--nav-item-letter-spacing);
+    display: var(--nav-item-display);
+    margin: var(--nav-item-margin);
+}
+
+.nav .nav-link {
+    display: block;
+    padding: 0.5rem 1rem;
+}
+
+.nav .nav-link:hover {
+    color: var(--nav-item-link-hover);
+}
+
+.nav .nav-link::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: var(--color-white);
+    width: 0;
+    height: 0.2rem;
+}
+  
+.nav .nav-item:hover .nav-link::before {
+    background-color: var(--color-primary);
+    width: 100%;
+}
+
+ul.row {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+}
+
+.col-1-3 {
+    width: 33.33%;
+}
+
+.col-1-2 {
+    width: 50%;
 }
 
 .footer-copyright {
@@ -225,6 +235,21 @@ ul.row {
 .footer ul {
     text-align: right;
 }
+  
+.row::after {
+    content: '';
+    display: table;
+    clear: both;
+}
+
+[class^='col-'] {
+    float: left;
+    padding: 0.5rem;
+}
+
+.footer-address {
+    color: var(--text-color);
+}
 
 .social-link {
     display: block;
@@ -232,18 +257,6 @@ ul.row {
 
 .social-link > svg {
     fill: var(--text-color);
-}
-
-.row::after {
-    content: "";
-    display: table;
-    clear: both;
-    background-color: #d73953;
-}
-
-[class^="col-"] {
-  float: left;
-  padding: .5rem;
 }
 
 .card-services .card-title {
@@ -260,21 +273,6 @@ ul.row {
     color: var(--color-white);
     background-color: var(--color-primary);
     text-decoration: none;
-}
-
-.button {
-    display: var(--button-display);
-    padding: var(--button-padding);
-    border: var(--button-border);
-    font-size: var(--button-font-size);
-    color: var(--button-color);
-    text-decoration: var(--button-text-decoration);
-}
-
-.button:hover {
-    color: var(--button-hover-color);
-    text-decoration: var(--button-hover-text-decoration);
-    background-color: var(--button-hover-background);
 }
 
 .card-testimonial {
@@ -302,7 +300,7 @@ ul.row {
 }
 
 .section-hero .section-inner {
-    padding: 10rem 40rem 2rem 0rem;
+    padding: 10rem 40rem 2rem 0;
 }
 
 .header {
